# docgen

./: .gitignore  .invoice.typ  Cargo.toml  IDEA.md  README.MD  default_config.toml  test
default/: config.toml  lang.toml
src/: codegen.rs  config.rs  contact.rs  data.rs  doc_config.rs  errors.rs  fonts.rs  lang.rs  main.rs  style.rs  utils.rs  world.rs
src/doctype/: invoice.rs  mod.rs  quotation.rs
src/interface/: ask.rs  mod.rs  select_list.rs  utils.rs
