[package]
name = "docgen"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = { git = "https://github.com/typst/typst", package = "typst" }
typst_pdf = { git = "https://github.com/typst/typst", package = "typst-pdf" }
comemo = { git = "https://github.com/typst/comemo", rev = "ddb3773" }
once_cell = "1.19.0"
include_dir = "0.7.3"
clap = { version = "4.4.12", features = ["derive"] }
thiserror = "1.0.56"
serde = { version = "1.0.194", features = ["derive"] }
toml = "0.8.8"
serde_json = "1.0.111"
chrono = "0.4.31"
